--- a/style.css
+++ b/style.css
@@ -31,6 +31,22 @@ body, html {
   }
 }
 
+.tooltip {
+    opacity: 0;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.8);
+    border: solid;
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    pointer-events: none;
+}
+
+.tick line {
+    stroke-opacity: 0.333;
+}
+
 #streamgraph {
     display: flex;
     justify-content: center;
@@ -38,6 +54,22 @@ body, html {
     height: 75vh;
 }
 
-.tick line {
-    stroke-opacity: 0.333;
+#multiline {
+    margin: 0 auto;
+    text-align: center;
+}
+
+#bar-seq {
+    margin: 0 auto;
+    text-align: center;
+}
+
+#bar-div {
+    margin: 0 auto;
+    text-align: center;
+}
+
+#line {
+    margin: 0 auto;
+    text-align: center;
 }
