--- a/style.css
+++ b/style.css
@@ -71,32 +71,7 @@ p {
     height: 75vh;
 }
 
-#multiline {
-    margin: 0 auto;
-    text-align: center;
-}
-
-#bar-seq {
-    margin: 0 auto;
-    text-align: center;
-}
-
-#bar-div {
-    margin: 0 auto;
-    text-align: center;
-}
-
-#line {
-    margin: 0 auto;
-    text-align: center;
-}
-
-#world-map {
-    margin: auto;
-    display: block;
-}
-
-#scatterplot {
+#world-map, #multiline, #bar-seq, #bar-div, #line, #scatterplot {
     margin: 0 auto;
     text-align: center;
 }
