--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
     color: lightgray;
 }
 
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -33,20 +33,17 @@ body, html {
     height: 50%;
 }
 
+.bgimg-5 {
+    background-image: url('img/method.jpg');
+    height: 50%;
+}
+
 p {
     font-size: 18px;
 }
 
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
 
 .tooltip {
     opacity: 0;
@@ -88,10 +85,6 @@ p {
     border-radius: 20px;
     background-color: black;
     color: white;
-}
-
-#reloadButton {
-    float: right;
 }
 
 #year-dropdown select {
